--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,7 +4,7 @@
     <div class="wrapper">
 
         <ul class="footer-links">
-            <li><a href="{{ site.baseurl }}/assets/download/data-science-quiz.apgk"><i class="fas fa-file-download fa-2x"></i></a>
+            <li><a href="{{ site.baseurl }}/assets/download/data-science-quiz.apkg"><i class="fas fa-file-download fa-2x"></i></a>
                 <a href="{{ site.baseurl }}/assets/download/data-science-quiz.apkg">Anki package</a></li>
             <li><a href="mailto:{{ site.email }}"><i class="fa fa-envelope fa-2x"></i></a>
                 <a href="mailto:{{ site.email }}">Contact</a>
